ibuilder/tests/not_compile/unknown_type.stderr
error[E0412]: cannot find type `Bar` in this scope
 --> $DIR/unknown_type.rs:2:12
  |
2 |     field: Bar,
  |            ^^^ not found in this scope

error[E0599]: no function or associated item named `builder` found for struct `Foo` in the current scope
 --> $DIR/unknown_type.rs:6:10
  |
1 | struct Foo {
  | ---------- function or associated item `builder` not found for this
...
6 |     Foo::builder();
  |          ^^^^^^^ function or associated item not found in `Foo`
