ibuilder/tests/not_compile/unknown_type.rs
struct Foo {
    field: Bar,
}

fn main() {
    Foo::builder();
}
